--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,14 @@
 #   unused-packages = true
 
 
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.19.8"
+
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.4.1"
+
 [prune]
   go-tests = true
   unused-packages = true
